wstunnel: split arguments correctly